--- a/labs/hub/src/showcase/navigation/theme-switcher.module.css
+++ b/labs/hub/src/showcase/navigation/theme-switcher.module.css
@@ -1,7 +1,7 @@
 /* ==LIGHT-DARK SWITCHER== */
 
 .radio-switch {
-  --base-font-size: 1rem;
+  --base-font-size: clamp(0.8rem, 0.65rem + 1.5vw, 1.3rem);
 
   display: flex;
   justify-content: center;
@@ -20,7 +20,7 @@
   position: relative;
   z-index: 2;
   display: inline-block;
-  font-size: calc(var(--base-font-size) * 0.9);
+  font-size: calc(var(--base-font-size) * 0.65);
   line-height: 2;
 }
 
@@ -59,7 +59,7 @@
   border-radius: 100%;
   background: var(--c-silvery-white);
   transition: transform 0.2s ease-in-out;
-  transform: translateX(-0.25em);
+  transform: translateX(-0.25em) translateY(10%);
 }
 
 .radio-switch label:first-of-type::after {
@@ -70,7 +70,7 @@
   border-radius: 1em;
   background: var(--c-dark-tangerine);
   transition: background 0.2s ease-in-out;
-  transform: translateY(3px);
+  transform: translateY(25%);
 }
 
 .radio-switch:focus-within label:first-of-type::after {
@@ -84,9 +84,14 @@
 }
 
 .radio-switch input:first-of-type:checked ~ label:first-of-type::before {
-  transform: translateX(-2.55em);
+  transform: translateX(-2.55em) translateY(10%);
 }
 
 .radio-switch input:last-of-type:checked ~ label:last-of-type {
   z-index: 1;
+}
+
+.label-icon > span > svg {
+  width: calc(var(--base-font-size) * 1.5);
+  height: calc(var(--base-font-size) * 1.5);
 }
